--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://AhmedFawzy900.github.io/Amazone_clone",
   "name": "amazone_clone",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -25,7 +26,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
+  
+  
 }
